--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "ProductManager.js",
- "type":"module",
-
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +20,8 @@
   "homepage": "https://github.com/AgusPane17/Entregables_Backend#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "randomstring": "^1.3.0"
   }
 }
